WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77468
[chromium] Compositor debug borders are not scaled correctly
https://bugs.webkit.org/show_bug.cgi?id=77468
Summary
[chromium] Compositor debug borders are not scaled correctly
Sami Kyostila
Reported
2012-01-31 12:53:46 PST
The compositor debug borders (--show-debug-borders) are not drawn with contents scale applied, so they do not coincide with their respective layers if contents scale != 1.
Attachments
Patch
(1.60 KB, patch)
2012-01-31 12:57 PST
,
Sami Kyostila
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sami Kyostila
Comment 1
2012-01-31 12:57:37 PST
Created
attachment 124801
[details]
Patch
James Robinson
Comment 2
2012-01-31 13:01:32 PST
Comment on
attachment 124801
[details]
Patch Hmm, guess this is why
http://trac.webkit.org/export/106381/trunk/LayoutTests/compositing/color-matching/image-color-matching.html
looks so cracked out with layer borders on :) R=me
WebKit Review Bot
Comment 3
2012-01-31 15:20:49 PST
Comment on
attachment 124801
[details]
Patch Clearing flags on attachment: 124801 Committed
r106406
: <
http://trac.webkit.org/changeset/106406
>
WebKit Review Bot
Comment 4
2012-01-31 15:20:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug