[chromium] Compositor debug borders are not scaled correctly https://bugs.webkit.org/show_bug.cgi?id=77468

Use CCLayerImpl::contentBounds() instead of CCLayerImpl::bounds() to calculate debug
border geometry so that the borders are properly scaled.

Patch by Sami Kyostila <skyostil@chromium.org> on 2012-01-31
Reviewed by James Robinson.

* platform/graphics/chromium/cc/CCLayerImpl.cpp:
(WebCore::CCLayerImpl::appendDebugBorderQuad):

Canonical link: https://commits.webkit.org/94360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106406 268f45cc-cd09-0410-ab3c-d52691b4dbfc